fix: text alignement and color

--- a/services/credential-server-ui/src/components/NavBar/NavBar.scss
+++ b/services/credential-server-ui/src/components/NavBar/NavBar.scss
@@ -16,6 +16,10 @@
       background-color: var(--color-primary-200);
     }
 
+    &.active {
+      color: var(--color-primary-700);
+    }
+
     .active-bar {
       height: 0.125rem;
       width: 80%;
@@ -26,7 +30,9 @@
       background-color: var(--color-primary-700);
     }
 
-    img {
+    img,
+    svg {
+      margin-right: 0.5rem;
       vertical-align: text-bottom;
     }
   }
@@ -43,12 +49,6 @@
     .menu-button {
       margin-right: 0;
       padding: 0.75rem 1rem 0.75rem 1.25rem;
-    }
-
-    .menu-icon,
-    svg {
-      margin-right: 0.5rem;
-      vertical-align: text-bottom;
     }
 
     .header-logo {
@@ -72,6 +72,13 @@
 
       &:hover {
         background-color: var(--color-primary-200);
+      }
+
+      &.active {
+        .MuiTypography-root,
+        .MuiListItemIcon-root {
+          color: var(--color-primary-700);
+        }
       }
 
       .active-bar {
